## Makefile.am -- Process this file with automake to produce Makefile.in

libc_urg_includedir = ${includedir}/c_urg
libc_urg_include_HEADERS = urg_ctrl.h urg_t.h urg_parameter_t.h serial_ctrl.h serial_utils.h serial_t.h serial_t_lin.h serial_t_win.h detect_os.h urg_delay.h math_utils.h urg_ticks.h ring_buffer.h
